# BGmi

./: .bandit  .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .pyup.yml  .readthedocs.yml  .style.yapf  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.cn.md  README.md  README.rst  README.windows.md  app.py  bgmi  bgmi.conf  bgmi.spec  codecov.yml  crontab.sh  dev.py  docker.sh  example.py  k.py  lint.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  script_example.py  setup.cfg  setup.py  table.py  (+3 more)
.azure-pipelines/: azure-pipelines.yml
.azure-pipelines/composes/: mysql-docker-compose.yaml
.azure-pipelines/scripts/: command_test.bash
.azure-pipelines/templates/: install-project.yaml  matrix.yaml
.azure-pipelines/templates/jobs/: base-unittest.yaml  build-binary.yaml  build-docker.yaml  build-docs.yaml  prepare.yaml  test-controller.yaml  test-downloader.yaml  test-mysql.yaml  test-sqlite.yaml
.azure-pipelines/templates/steps/: cache-pip.yaml  codecov.yaml  commands.yaml  get_test_data.yaml  install-project.yaml
.chglog/: CHANGELOG.tpl.md  config.yml  unreleased.tpl.md
.ci/: azure-pipelines.yml  bgmi.spec  build.sh  command_test.bash  docker.sh  install.bash  install_python_on_osx.bash  script.bash  test.sh  unittest.bash
.ci/aria2/: Dockerfile  entrypoint.sh
.ci/aria2/.aria2/: aria2.conf
.ci/jobs/: binary.yaml  lint.yaml  pre-release.yaml  pypi.yaml  release.yaml  test.yaml
.ci/jobs/lint/: mypy.yaml  style.yaml
.ci/templates/: install-project.yaml  job.yaml
.ci/tests/: aria2.bash  delute.bash  test_download_delegate.py  transmission.bash
.ci/transmission/: Dockerfile  transmission_settings.json
.circleci/: config.yml  export_requirements.py  hash_requirement_files.py
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  contributing.md  mergify.yml  renovate.json
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug_report.md  feature_request.md
.github/matcher/: pylint.json
.github/matcher/pylint/: error.json  warning.json
.github/workflows/: build.yaml  ci.yaml  code-style.yml  lint.yaml  release.yaml  renovate.yaml  test-downloader.yaml  test.yaml  un-released.yaml  update-pre-commit.yaml
bgmi/: __init__.py  __main__.py  cli.py  command.py  config.py  config_utils.py  constants.py  controllers.py  cron.vbs  crontab.sh  download.py  fetch.py  http.py  logger.py  main.py  models.py  namespace.py  pure_utils.py  script.py  services.py  session.py  setup.py  sql.py  test_config.py  test_pure_utils.py  test_setup.py  update.py  upgrade.py  utils.py
bgmi/downloader/: __init__.py  aria2_rpc.py  base.py  conftest.py  deluge.py  noop.py  pikpak.py  qbittorrent.py  test_downloader.py  transmission.py  transmissionRpc.py  transmission_rpc.py  xunlei.py
bgmi/front/: admin.py  api.py  base.py  http.py  index.py  nice_server.py  resources.py  routes.py  server.py
bgmi/front/templates/: bangumi.html  download.xml  dplayer.html  image.css
bgmi/lib/: cli.py  constants.py  controllers.py  download.py  fetch.py  models.py  script.py  table.py  test_update.py  update.py
bgmi/lib/constants/: __init__.py  actions.py  kv.py  namespace.py
bgmi/lib/db_models/: __init__.py  _db.py  _kv.py  _tables.py
bgmi/lib/models/: __init__.py  _db.py  _fields.py  _kv.py  _tables.py  bangumi_base.py  bangumi_item.py  data_source_item.py  episode.py  followed.py  status.py
bgmi/lib/sql/: 5.0.0a4.sql
bgmi/models/: __init__.py  bangumi.py  bangumi_item.py  config.py  data_source_item.py  followed.py  subtitle.py
bgmi/others/: _bgmi.sh  _bgmi_completion.sh  _bgmi_completion_bash.sh  _bgmi_completion_zsh.sh  _bgmi_completion_zsh.zsh  bgmi_http.service  caddyfile  cron.vbs  crontab.sh  me.ricterz.bgmi.plist  nginx.conf
bgmi/patches/: bangumi.py  keyword.py
bgmi/plugin/: base.py  download.py  status.py
bgmi/utils/: __init__.py  _decorator.py  episode_parser.py  filter_utils.py  followed_filter.py  langconv.py  pure_utils.py  test_episode_parser.py  test_pure_utils.py  test_utils.py  torrent.py  utils.py  utils_test.py
bgmi/website/: __init__.py  bangumi_moe.py  bangumimoe.py  base.py  mikan.py  model.py  share_dmhy.py  test_website.py
ci/: disable_transmission_auth_require.py  install_and_start_downloader  stop_downloader.py
docs/: CHANGELOG.md  downloader.md  http.api.yaml  live.py  readme.md  requirements.txt
docs/http-api/: api.yaml  index.html
docs/source/: cli.rst  conf.py  config.rst  controllers.rst  data_source_base.rst  development.rst  http_api.rst  index.rst  plugins.rst
docs/source/_templates/: layout.html
example/: script.py
others/: aria2c.conf  bgmi.conf  supervisord.conf
pyinstaller/: ldd
requirements/: build.txt  dev.txt  prod.txt
requirements/extras/: mysql.txt
test/: programme.html  test_bangumi.py  test_command.py  test_models.py
test_dir/: package.json
tests/: base.py  conftest.py  init_env_and_run_unit_test.sh  mock_websites.py  script_example.py  test_bangumi.py  test_cli.py  test_command.py  test_config.py  test_controllers.py  test_data_source.py  test_db_models.py  test_download.py  test_download_delegate.py  test_downloader.py  test_http_api.py  test_models.py  test_script.py  test_utils.py  test_website.py  tmp_disable_test_http_api.py  todo_test_data_source.py  un_done_test_download_delegate.py  undone_test_download.py  undone_test_http_api.py
tests/data/: bgmi-frontend-1.1.4.tgz  episode
tests/data/db_models/: main_bangumi_item.json  main_subtitle.json  subtitle.json
tests/data/models/: main_bangumi.json  main_bangumi_item.json  main_followed.json  main_subtitle.json  subtitle.json
tests/data/website/: bangumi_moe.bangumi-episode.json  bangumi_moe.fetch_bangumi_calendar_and_subtitle_group.json  dmhy.bangumi-episode.json  mikan_project.bangumi-episode.json  (+2 more)
tests/downloader/: conftest.py  docker-compose.yaml  setup.py  test_aria2.py  test_common.py  test_deluge.py  test_qbittorrent.py  test_transmission.py
tests/e2e/: test_cli.py  test_data_source.py
(+9 files in other folders)
