[metadata]
name = bgmi
keywords = bangumi, bgmi, feed
description = BGmi is a cli tool for subscribed bangumi.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/BGmi/BGmi
download_url = https://github.com/BGmi/BGmi/tarball/master
;include_package_data=True
zip_safe = False

license = MIT
license_file = LICENSE

classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Other Audience
  Natural Language :: Chinese (Traditional)
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy

[options]
;packages=find:
python_requires = >=3.4
;install_requires = file: requirements.txt
;tests_requires = file: test_requirements.txt

[options.entry_points]
console_scripts =
  bgmi = bgmi.main:main
  bgmi_http = bgmi.front.server:main

[options.extras_require]
mysql = pymysql

[pycodestyle]
max_line_length = 120
